vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionMessa_v2__c/SDO_Analytics_AIAgentInteractionMessa_v2__c.object-meta.xml
<CustomObject>
    <label>AIAgentInteractionMessage</label>
    <nameField>
        <label>AIAgentInteractionMessage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AIAgentInteractionMessages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>