vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionMessa_v2__c/fields/AI_Agent_Interaction_Message_Type__c.field-meta.xml
<CustomField>
    <fullName>AI_Agent_Interaction_Message_Type__c</fullName>
    <label>AI Agent Interaction Message Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>