vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionMessa_v2__c/fields/AI_Agent_Session_Participant__c.field-meta.xml
<CustomField>
    <fullName>AI_Agent_Session_Participant__c</fullName>
    <label>AI Agent Session Participant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>