vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionMessa_v2__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>