vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionMessa_v2__c/fields/Message_Sent_Days__c.field-meta.xml
<CustomField>
    <fullName>Message_Sent_Days__c</fullName>
    <label>Message Sent Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>