vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionMessa_v2__c/fields/Message_Sent_Time__c.field-meta.xml
<CustomField>
    <fullName>Message_Sent_Time__c</fullName>
    <label>Message Sent Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>