vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionMessa_v2__c/fields/Message_Sent_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Message_Sent_Timestamp__c</fullName>
    <formula>DATETIMEVALUE(TEXT(TODAY() + Message_Sent_Days__c ) + &quot; &quot; + Message_Sent_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message Sent Timestamp</label>
    <type>DateTime</type>
</CustomField>