vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionMessa_v2__c/fields/Parent_Message__c.field-meta.xml
<CustomField>
    <fullName>Parent_Message__c</fullName>
    <label>Parent Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>