vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionMessa_v2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AI_Agent_Interaction__c</columns>
    <columns>AI_Agent_Interaction_Message_Type__c</columns>
    <columns>Ai_Agent_Interaction_Msg_Content_Type__c</columns>
    <columns>AI_Agent_Session__c</columns>
    <columns>AI_Agent_Session_Participant__c</columns>
    <columns>Content__c</columns>
    <columns>Individual__c</columns>
    <columns>Parent_Message__c</columns>
    <columns>Session_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>